# assignment_example_pkg

./: CONTRIBUTING.md  README.md  package.xml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml
example_package/: example.py  example_runner.py
tests/: test_example.py
